wordpress-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wp-app-emea-dev
  labels:
    app: wp-app-emea-dev
spec:
  selector:
    matchLabels:
      app: wp-app-emea-dev
      tier: frontend
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  replicas: 3
  template:
    metadata:
      labels:
        app: wp-app-emea-dev
        tier: frontend
    spec:
      containers:
      - image: wordpress:5.5.1-php7.4-apache
        name: wordpress
        ports:
        - containerPort: 80
          name: wordpress
        resources:
          limits:
            cpu: 500m
          requests:
            cpu: 200m
        volumeMounts:
        - name: wordpress-hnas-volume-pvc
          mountPath: /var/www/html
      volumes:
      - name: wordpress-hnas-volume-pvc
        persistentVolumeClaim:
          claimName: pvc-wp-hnas
