mysql-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: wp-mysql-emea-dev
  labels:
    app: wp-mysql-emea-dev
spec:
  ports:
    - port: 3306
  selector:
    app: wp-mysql-emea-dev
    tier: mysql
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wp-mysql-emea-dev
  labels:
    app: wp-mysql-emea-dev
spec:
  selector:
    matchLabels:
      app: wp-mysql-emea-dev
      tier: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wp-mysql-emea-dev
        tier: mysql
    spec:
      containers:
      - image: mysql:5.6
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: pvc-wp-emea-mysql-dev
          mountPath: /var/lib/mysql
      volumes:
      - name: pvc-wp-emea-mysql-dev
        persistentVolumeClaim:
          claimName: pvc-wp-mysql-emea-dev
