wp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wp-app-emea-dev
  labels:
    app: wp-app-emea-dev
spec:
  ports:
    - port: 80
  selector:
    app: wp-app-emea-dev
    tier: frontend
  type: NodePort
